--- a/proyectoAngular/saboresCompartidos/package.json
+++ b/proyectoAngular/saboresCompartidos/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@types/intro.js": "^3.0.0",
     "bootstrap": "^4.5.3",
     "bs-stepper": "^1.7.0",
+    "intro.js": "^3.2.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
