--- a/proyectoAngular/saboresCompartidos/package.json
+++ b/proyectoAngular/saboresCompartidos/package.json
@@ -22,6 +22,7 @@
     "@types/intro.js": "^3.0.0",
     "bootstrap": "^4.5.3",
     "bs-stepper": "^1.7.0",
+    "core-js": "^3.8.3",
     "intro.js": "^3.2.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
